optimize cloud client
