# services/interfaces.go
@@ -1,28 +1,26 @@
 package services
 
 import (
-	"os"
 	"zig-cloud/commons"
 	"zig-cloud/services/cloudprovider/alicloud"
 
 	"github.com/aliyun/alibaba-cloud-sdk-go/services/ecs"
-	"github.com/astaxie/beego"
 )
 
 // define all kinds of services
-
 type Provider interface {
 	CreateVpc(request *commons.CreateVpcRequest) (*commons.CreateVpcResponse, error)
 	CreateVSwitch(request *commons.CreateVSwitchRequest) (*commons.CreateVSwitchResponse, error)
 	CreateSecurityGroup(request *commons.CreateSecurityGroupRequest) (*commons.CreateSecurityGroupResponse, error)
+	CreateAuthorizeSecurityGroup(request *commons.AuthorizeSecurityGroupRequest) (*commons.AuthorizeSecurityGroupResponse, error)
 	RunInstances(request *commons.RunInstancesRequest) (*commons.RunInstancesResponse, error)
 	DescribeRegions() (*ecs.DescribeRegionsResponse, error)
 	DescribeZones(regionId string) ([]*commons.DescribeZonesResponse, error)
 }
 
-func GetProviderByType(providerType string) Provider {
+func GetProviderByType(providerType commons.CloudProvider) Provider {
 	switch providerType {
-	case commons.CloudProviderAliCloud:
+	case commons.AliCloud:
 		return NewAliCloudProvider()
 	default:
 		return NewAliCloudProvider()
@@ -30,20 +28,5 @@ func GetProviderByType(providerType string) Provider {
 }
 
 func NewAliCloudProvider() Provider {
-	var RegionId, AccessKeyId, AccessKeySecret string
-	useEnv, err := beego.AppConfig.Bool(commons.UseEnv)
-
-	if err == nil && useEnv {
-		RegionId = os.Getenv(commons.RegionId)
-		AccessKeyId = os.Getenv(commons.AccessKeyId)
-		AccessKeySecret = os.Getenv(commons.AccessKeySecret)
-	} else {
-		RegionId = beego.AppConfig.String(commons.RegionId)
-		AccessKeyId = beego.AppConfig.String(commons.AccessKeyId)
-		AccessKeySecret = beego.AppConfig.String(commons.AccessKeySecret)
-	}
-
-	config := &alicloud.AliCloudConfig{RegionId: RegionId, AccessKeyId: AccessKeyId, AccessKeySecret: AccessKeySecret}
-	provider := &alicloud.CloudProvider{Config: config}
-	return provider
+	return &alicloud.CloudProvider{Client: alicloud.GetClient()}
 }
